--- a/docs-dist/components/detail-present/index.html
+++ b/docs-dist/components/detail-present/index.html
@@ -25,7 +25,7 @@
         );
       })();
     </script>
-    <title>Hello art-antd-react! - art-antd-react</title>
+    <title>DetailPresent 详情陈述 - art-antd-react</title>
   </head>
   <body>
     <div id="root"></div>
