--- a/docs-dist/components/form-items-builder/index.html
+++ b/docs-dist/components/form-items-builder/index.html
@@ -7,9 +7,9 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
     <link rel="shortcut icon" type="image/x-icon" href="/icons/logo.ico" />
-    <link rel="stylesheet" href="/umi.css" />
+    <link rel="stylesheet" href="./docs-dist/umi.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/docs-dist";
     </script>
     <script>
       //! umi version: 3.5.26
@@ -25,10 +25,11 @@
         );
       })();
     </script>
+    <title>FormItemsBuilder 表单项构建器 - art-antd-react</title>
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="/umi.js"></script>
+    <script src="./docs-dist/umi.js"></script>
   </body>
 </html>
